fix(ui5-dialog): adjust scrollbar gutter
Problem description:
The ui5-dialog's content could have a redundant
horizontal scrollbar on Safari and Firefox when
there is a vertical scrollbar placed as an overlay.

Solution:
The vertical scrollbar is configured to be paced
in the gutter instead of being an overlay.

Fixes: #4724
Fixes: #4725

--- a/packages/main/src/themes/PopupsCommon.css
+++ b/packages/main/src/themes/PopupsCommon.css
@@ -55,6 +55,7 @@
 
 .ui5-popup-content {
     overflow: auto;
+    scrollbar-gutter: stable;
 
     /* Consider how to make this top level */
     box-sizing: border-box;
